Fixed text wrapping around images in single post template

--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -591,6 +591,12 @@ a.support-action {
     font-weight: bold;
     font-size: larger;
 }
+.post article img {
+    float: left;
+}
+.post article p {
+    margin-top: 0;
+}
 .post .post-image-thumbnail {
     vertical-align: top;
     margin-right: 1em;
